[FE] Fixed Home + Game and started Lobby

--- a/stop-fe/package.json
+++ b/stop-fe/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "cra-template": "1.0.2",
     "gulp": "^4.0.2",
+    "lodash": "^4.17.15",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
