--- a/stop-fe/package.json
+++ b/stop-fe/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
     "cra-template": "1.0.2",
     "gulp": "^4.0.2",
     "lodash": "^4.17.15",
