--- a/stop-fe/package.json
+++ b/stop-fe/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.46",
     "cra-template": "1.0.2",
     "gulp": "^4.0.2",
     "lodash": "^4.17.15",
