--- a/stop-fe/package.json
+++ b/stop-fe/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-socket-io": "^0.2.5",
+    "react-use-websocket": "^1.3.4",
     "socket.io": "^2.3.0",
     "styled-components": "^5.0.1"
   },
