--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "3.4.0",
     "react-socket-io": "^0.2.5",
     "react-use-websocket": "^1.3.4",
+    "serve": "^11.3.0",
     "socket.io": "^2.3.0",
     "styled-components": "^5.0.1"
   },
